...
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController title="Расписание" id="BYZ-38-t0r" customClass="MenuViewController" customModule="OmGTU" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="faculties_button"/>
                                        </userDefinedRuntimeAttributes>
                                        <variation key="widthClass=regular">
...
                                        <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="ПРЕПОДАВАТЕЛИ">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                        <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="РАСПИСАНИЕ МОЕЙ ГРУППЫ">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
        <scene sceneID="3qu-Ke-yw6">
            <objects>
                <viewController title="Расписание групп" id="PeL-PF-RYJ" customClass="GroupsViewController" customModule="OmGTU" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="LZK-PH-wtF">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xta-A9-ct3">
                                                            <rect key="frame" x="0.0" y="18" width="394" height="29.666666666666671"/>
                                                            <state key="normal" title="Сменить дату"/>
                                                            <connections>
                                                                <action selector="selectDate:" destination="sMo-ta-Gkb" eventType="touchUpInside" id="Rjh-7y-2zx"/>
...
        <scene sceneID="xkr-Cp-NXo">
            <objects>
                <viewController title="Расписание преподавателей" id="58V-5r-cYq" customClass="LectorsViewController" customModule="OmGTU" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="SV6-xC-k1l">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Выберите первую букву фамилии" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ArI-d1-yAE">
                                                            <rect key="frame" x="0.0" y="15" width="394" height="30"/>
                                                            <nil key="textColor"/>
...
        <scene sceneID="3Eg-es-kr5">
            <objects>
                <viewController title="Мое расписание" id="2ke-Ja-5lY" customClass="MyScheduleViewController" customModule="OmGTU" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="gA0-9W-8G4">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
...
